--- a/client/footer.html
+++ b/client/footer.html
@@ -3,8 +3,17 @@
 		<div class="footerBkg">
 			
 			<div class="row">
-				<div class="small-12 columns footer-row">
-					<p><small>&copy; Peter Chaivre 2013</small></p>
+				<div class="small-12 medium-6 columns">
+					<ul class="">
+						<li><a href="{{bugUrl}}" target="_blank">Report a bug</a></li>
+						<li><a href="{{twitterUrl}}"><i class="ion-social-twitter"></i></a></li>
+						<li><a href="{{linkedinUrl}}"><i class="ion-social-linkedin"></i></a></li>
+						<li><a href="{{blogUrl}}"><i class="ion-social-wordpress"></i></a></li>
+					</ul>
+				</div>
+				<div class="small-12 medium-6 columns">
+					
+					<p>&copy; Peter Chaivre 2013</p>
 				</div>
 			</div>
 			
