--- a/client/nav.html
+++ b/client/nav.html
@@ -26,9 +26,10 @@
 					<li><a href="#" id="login">Sign in</a></li>	
 				</ul>
 			{{/if}}
-			<!-- Left Nav Section
+			<!-- Left Nav Section-->
 			<ul class="left">
-			</ul> -->
+				<li><a target="_blank" href="{{bugUrl}}">Report a bug</a></li>
+			</ul>
 		</section>
 	</nav>
 </template>
