--- a/client/home.html
+++ b/client/home.html
@@ -65,6 +65,7 @@
 				{{/autoForm}}
 			</div>
 		</div>
+		</div>
 		<div id="benefits">
 			<div class="row text-center">
 				<div class="small-12 medium-4 columns">
@@ -84,8 +85,25 @@
 				</div>
 			</div>
 		</div>
-		
-	</div>
+		<div id="bio">
+			<div class="row" >
+				<div class="small-12 medium-3 columns">
+					<img class="circle-large" src="http://graph.facebook.com/1249063254/picture/?width=200&height=200">
+					
+				</div>
+				<div class="small-12 medium-9 columns">
+					<h4>Hi!  I'm Peter Chaivre</h4>
+					<div class="social-icons">
+						<a href="{{twitterUrl}}"><i class="ion-social-twitter"></i></a>
+						<a href="{{linkedinUrl}}"><i class="ion-social-linkedin"></i></a>
+						<a href="{{blogUrl}}"><i class="ion-social-wordpress"></i></a>
+					</div>
+					<h5 class="subheader">I'm a digital producer in NYC, and I love creating platforms and web apps.  This is a little experiment with <a href="http://www.meteor.com">Meteor.js</a> and <a href="http://foundation.zurb.com">Foundation 5</a>.  It's an alpha, but feel free to play and <a href="{{bugUrl}}">report any bugs</a> you find!</h5>
+					
+				</div>
+			</div>
+		</div>
+	
 	
 
 
