--- a/client/home.html
+++ b/client/home.html
@@ -3,11 +3,11 @@
 		<div class="row headerRow">
 			<div class="small-12 medium-7 columns heroCopy">
 				<h1>It's 'Party Hard'<br/>Not 'Party Difficult'</h1>
-				<p>BringIt makes it easy to plan your next get-together:
+				<p>Bring It! makes it easy to plan your next get-together:
 					<ul>
 						<li>Make a list of items</li>
 						<li>Share the list with your friends</li>
-						<li>Guests sign up to bring items</li>
+						<li>They pick items to bring, or sign up for something else</li>
 					</ul>
 				</p>
 			</div>
@@ -80,7 +80,7 @@
 				</div>
 				<div class="small-12 medium-4 columns">
 					<i class="ion-checkmark-round"></i>
-					<h4>Select items to bring</h4>
+					<h4>They 'Bring It!'</h4>
 					<p>Friends sign in with Facebook and pick the items they're going to bring</p>
 				</div>
 			</div>
