--- a/client/notFound.html
+++ b/client/notFound.html
@@ -1,13 +1,9 @@
 <template name="notFound">
-	<div class="container">
-		<div class="row">
-			<div class="small-12 columns">
+	<div class="row">
+		<div class="small-12 columns">
+			<div class="text-center">
 				<h1>404 - Party Foul!</h1>
-			</div>
-		</div>
-		<div class="row">
-			<div class="small-12 columns">
-				<p>Sorry, that event was not found.</p>
+				<h3>Go <a href="{{pathFor 'home'}}">home</a> website &mdash; you're drunk.</h3>
 			</div>
 		</div>
 	</div>
