--- a/client/nav.html
+++ b/client/nav.html
@@ -4,19 +4,21 @@
 			<li class="name">
 				<h1><a href="/">BRING IT! <em>alpha</em></a></h1>
 			</li>
-			 <li class="toggle-topbar menu-icon"><a><span></span></a></li>
+			 <li class="toggle-topbar menu-icon"><a><span>Menu</span></a></li>
 		</ul>
 		<section class="top-bar-section">
 			<!-- Right Nav Section -->
 			{{#if currentUser}}
 				<ul class="right hide-for-medium-up">
-					<li><a href="{{pathFor 'eventList'}}"> My events</a></li>
+					<li class="{{active 'home'}}"><a href="{{pathFor 'home'}}">New event</a></li>
+					<li class="{{active 'eventList'}}"><a href="{{pathFor 'eventList'}}" > My events</a></li>
 					<li><a href="{{pathFor 'logout'}}">Sign out</a></li>
 				</ul>
 				<ul class="right show-for-medium-up">
+					<li class="{{active 'home'}}"><a href="{{pathFor 'home'}}" >New event</a></li>
+					<li class="{{active 'eventList'}}"><a href="{{pathFor 'eventList'}}" >My events</a></li>
 					<li class="has-dropdown"><a><img class="circle-small left" src='{{user_image currentUser}}'> {{user_name currentUser}}</a>
 						<ul class="dropdown">
-							<li><a href="{{pathFor 'eventList'}}"> My events</a></li>
 							<li><a href="{{pathFor 'logout'}}">Sign out</a></li>
 						</ul>
 					</li>
