--- a/client/home.html
+++ b/client/home.html
@@ -32,7 +32,7 @@
 				<div class="row ">
 					<div class="small-12 columns {{#if afFieldIsInvalid 'evDate'}} error{{/if}}">
 						{{afFieldLabel 'evDate'}}
-						{{afFieldInput 'evDate'}}
+						{{afFieldInput 'evDate' placeholder='MM/DD/YYYY'}}
 						{{#if afFieldIsInvalid 'evDate'}}
 						<small class="error">{{afFieldMessage 'evDate'}}</small>
 						{{/if}}
