Add responsive section on homepage

--- a/client/home.html
+++ b/client/home.html
@@ -85,6 +85,18 @@
 				</div>
 			</div>
 		</div>
+		<div id="responsive">
+			<div class="row">
+				<div class="small-12 medium-8 columns">
+					<img src="BringIt_Showcase_transparent.png">
+				</div>
+				<div class="small-12 medium-4 columns">
+					<h4>Works on any Screen</h4>
+					<p>Bring It! will work just as well on your mobile device as on your laptop.</p>
+				</div>
+			</div>
+		</div>
+
 		<div id="bio">
 			<div class="row" >
 				<div class="small-12 medium-3 columns">
@@ -98,7 +110,7 @@
 						<a href="{{linkedinUrl}}"><i class="ion-social-linkedin"></i></a>
 						<a href="{{blogUrl}}"><i class="ion-social-wordpress"></i></a>
 					</div>
-					<h5 class="subheader">I'm a digital producer in NYC, and I love creating platforms and web apps.  This is a little experiment with <a href="http://www.meteor.com">Meteor.js</a> and <a href="http://foundation.zurb.com">Foundation 5</a>.  It's an alpha, but feel free to play and <a href="{{bugUrl}}">report any bugs</a> you find!</h5>
+					<h5 class="subheader">I'm a digital producer in NYC, and I love creating platforms and web apps.  This is a little experiment with <a href="http://www.meteor.com">Meteor.js</a> and <a href="http://foundation.zurb.com">Foundation 5</a>.  It's an alpha (and may not ever get past that stage), but feel free to play and <a href="{{bugUrl}}">report any bugs</a> you find!</h5>
 					
 				</div>
 			</div>
