Correct spacing on homepage

--- a/client/home.html
+++ b/client/home.html
@@ -78,7 +78,7 @@
 					<h4>Invite your friends</h4>
 					<p>Just send your friends the link.  They can see all the event details and the list of items</p>
 				</div>
-				<div class="small-12 medium-4 columns">
+				<div class="small-12 medium-4 columns last-item">
 					<i class="ion-checkmark-round"></i>
 					<h4>They 'Bring It!'</h4>
 					<p>Friends sign in with Facebook and pick the items they're going to bring</p>
@@ -90,7 +90,7 @@
 				<div class="small-12 medium-8 columns">
 					<img src="BringIt_Showcase_transparent.png">
 				</div>
-				<div class="small-12 medium-4 columns">
+				<div class="small-12 medium-4 columns ">
 					<h4>Works on any Screen</h4>
 					<p>Bring It! will work just as well on your mobile device as on your laptop.</p>
 				</div>
